[gd_scene load_steps=6 format=2]

[ext_resource path="res://addons/dialogic/Editor/Common/TLabel.tscn" type="PackedScene" id=1]
[ext_resource path="res://addons/dialogic/Events/Character/AnimationsSettings.gd" type="Script" id=2]
[ext_resource path="res://addons/dialogic/Editor/Events/Fields/DialogicResourcePicker.tscn" type="PackedScene" id=3]

[sub_resource type="Image" id=3]
data = {
"data": PoolByteArray( 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 ),
"format": "LumAlpha8",
"height": 16,
"mipmaps": false,
"width": 16
}

[sub_resource type="ImageTexture" id=2]
flags = 4
flags = 4
image = SubResource( 3 )
size = Vector2( 16, 16 )

[node name="Animations" type="HSplitContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.5

[node name="TLabel" parent="VBoxContainer" instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1024.0
margin_bottom = 14.0
text = "Animations"
title = true

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 18.0
margin_right = 1024.0
margin_bottom = 42.0

[node name="TLabel2" parent="VBoxContainer/HBoxContainer" instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 5.0
margin_right = 494.0
margin_bottom = 19.0
size_flags_horizontal = 3
text = "Custom anims folder"

[node name="CustomAnimationsFolder" type="LineEdit" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
margin_left = 498.0
margin_right = 992.0
margin_bottom = 24.0
size_flags_horizontal = 3

[node name="CustomAnimationsFolderOpener" type="Button" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
margin_left = 996.0
margin_right = 1024.0
margin_bottom = 24.0
icon = SubResource( 2 )

[node name="TLabel2" parent="VBoxContainer" instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 46.0
margin_right = 1024.0
margin_bottom = 60.0
text = "Defaults"
title = true

[node name="DefaultIn" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 64.0
margin_right = 1024.0
margin_bottom = 104.0

[node name="TLabel2" parent="VBoxContainer/DefaultIn" instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 13.0
margin_right = 673.0
margin_bottom = 27.0
size_flags_horizontal = 3
text = "Default Join animation"

[node name="JoinDefault" parent="VBoxContainer/DefaultIn" instance=ExtResource( 3 )]
unique_name_in_owner = true
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 677.0
margin_top = 8.0
margin_right = 829.0
margin_bottom = 32.0

[node name="JoinDefaultLength" type="SpinBox" parent="VBoxContainer/DefaultIn"]
unique_name_in_owner = true
margin_left = 833.0
margin_right = 907.0
margin_bottom = 40.0
step = 0.1

[node name="TLabel3" parent="VBoxContainer/DefaultIn" instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 911.0
margin_top = 13.0
margin_right = 944.0
margin_bottom = 27.0
text = "Wait:"

[node name="JoinDefaultWait" type="CheckButton" parent="VBoxContainer/DefaultIn"]
unique_name_in_owner = true
margin_left = 948.0
margin_right = 1024.0
margin_bottom = 40.0

[node name="DefaultOut" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 108.0
margin_right = 1024.0
margin_bottom = 148.0

[node name="TLabel2" parent="VBoxContainer/DefaultOut" instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 13.0
margin_right = 673.0
margin_bottom = 27.0
size_flags_horizontal = 3
text = "Default Leave animation"

[node name="LeaveDefault" parent="VBoxContainer/DefaultOut" instance=ExtResource( 3 )]
unique_name_in_owner = true
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 677.0
margin_top = 8.0
margin_right = 829.0
margin_bottom = 32.0

[node name="LeaveDefaultLength" type="SpinBox" parent="VBoxContainer/DefaultOut"]
unique_name_in_owner = true
margin_left = 833.0
margin_right = 907.0
margin_bottom = 40.0
step = 0.1

[node name="TLabel4" parent="VBoxContainer/DefaultOut" instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 911.0
margin_top = 13.0
margin_right = 944.0
margin_bottom = 27.0
text = "Wait:"

[node name="LeaveDefaultWait" type="CheckButton" parent="VBoxContainer/DefaultOut"]
unique_name_in_owner = true
margin_left = 948.0
margin_right = 1024.0
margin_bottom = 40.0

[connection signal="pressed" from="VBoxContainer/HBoxContainer/CustomAnimationsFolderOpener" to="." method="_on_CustomAnimationsFolderOpener_pressed"]
[connection signal="value_changed" from="VBoxContainer/DefaultIn/JoinDefault" to="." method="_on_JoinDefault_value_changed"]
[connection signal="value_changed" from="VBoxContainer/DefaultIn/JoinDefaultLength" to="." method="_on_JoinDefaultLength_value_changed"]
[connection signal="toggled" from="VBoxContainer/DefaultIn/JoinDefaultWait" to="." method="_on_JoinDefaultWait_toggled"]
[connection signal="value_changed" from="VBoxContainer/DefaultOut/LeaveDefault" to="." method="_on_LeaveDefault_value_changed"]
[connection signal="value_changed" from="VBoxContainer/DefaultOut/LeaveDefaultLength" to="." method="_on_LeaveDefaultLength_value_changed"]
[connection signal="toggled" from="VBoxContainer/DefaultOut/LeaveDefaultWait" to="." method="_on_LeaveDefaultWait_toggled"]
